<resources>
    <string name="app_name">Tutor Connect</string>
    <string name="tutor_connect">Tutor Connect</string>
    <string name="student">Student</string>
    <string name="find_local_and_online_educators_for_tutoring_coaching_and_assistance_with_academic_work">Find local and online educators for tutoring, coaching, and assistance with academic work.</string>
    <string name="welcome">Welcome !</string>
    <string name="teacher">Teacher</string>
    <string name="go">Go</string>
    <string name="login_as_student">Login as Student</string>
    <string name="email">Email</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">LOG IN</string>
    <string name="don_t_have_an_account">Don\'t have account? </string>
    <string name="login_as_teacher">Login as Teacher</string>
    <string name="register_as_teacher">Register as Teacher</string>
    <string name="sign_up_as_teacher">Sign up as Teacher</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="details">Details</string>
    <string name="birth_date">Date of Birth</string>
    <string name="location">Location</string>
    <string name="postal_code">Postal code</string>
    <string name="speciality_strength_or_current_role">Speciality, Strength or Current role</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="select_grade">Select grade</string>
    <string name="institute_name_with_city">Institute name with city</string>
    <string name="organization_name">Organization name</string>
    <string name="job_description">Job description</string>
    <string name="Cgpa">CGPA</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="fee_in_us">Fee in $US</string>
    <string name="profile_description">Profile description</string>
    <string name="this_is_most_important_section_for_you">This is Most Important Section for you</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="male">Male</string>
    <string name="subject">Subject</string>
    <string name="degree_name">Degree Name</string>
    <string name="experiences_in_years">Experiences in years</string>
    <string name="logo">logo</string>
    <string name="register">REGISTER</string>
    <string name="click_on_image_to_continue">Click on image to continue</string>
    <string name="please_select_your_date_of_birth">Please select your date of birth</string>
    <string name="please_select_your_gender">Please select your gender</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="please_confirm_your_password">Please confirm your password</string>
    <string name="please_enter_your_speciality">Please enter your speciality</string>
    <string name="please_enter_your_location">Please enter your location</string>
    <string name="please_enter_your_postal_code">Please enter your postal code</string>
    <string name="please_enter_your_phone_number">Please enter your phone number</string>
    <string name="please_enter_your_subject">Please enter your subject</string>
    <string name="please_enter_your_institute_name">Please enter your institute name</string>
    <string name="please_enter_your_degree">Please enter your degree</string>
    <string name="please_enter_your_experience">Please enter your experience</string>
    <string name="please_enter_your_cgpa">Please enter your cgpa</string>
    <string name="please_enter_your_organization">Please enter your organization</string>
    <string name="please_enter_your_job_description">Please enter your job description</string>
    <string name="please_enter_your_fee">Please enter your fee</string>
    <string name="please_enter_your_profile">Please enter your profile</string>
    <string name="password_not_match">password mis-matched</string>
    <string name="please_select_your_grade">Please select your grade</string>
    <string name="input_required">Input Required</string>
    <string name="registered_successfully">Registered Successfully</string>
    <string name="it_s_a_pleasure_to_meet_you_we_are_excited_that_you_re_here_so_let_s_get_started">It’s a pleasure to meet you. We are excited that you’re here so let’s get started!</string>
    <string name="get_started">Get Started</string>
    <string name="login_successfully">Login successfully</string>
    <string name="don_t_worry_it_happens_please_enter_the_email_we_will_send_you_email_on_this_mail">Don’t worry ! It happens. Please enter the email we will send you email on this mail.</string>
    <string name="email_verification">Email Verification</string>
    <string name="please_change_password_through_the_email_that_we_have_sent_you_and_then_click_on_the_save_button">Please change password through the email that we have sent you and then click on the save button</string>
    <string name="please_verify_your_email_through_the_email_that_we_have_sent_you_and_then_click_on_the_save_button">Please verify your email through the email that we have sent you and then click on the save button</string>
    <string name="don_t_receive_email">Don’t receive email ?</string>
    <string name="resend">Resend</string>
    <string name="new_password">New Password</string>
    <string name="save">Save</string>
    <string name="cont">Continue</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="email_sent">Email sent</string>
    <string name="please_enter_your_address">Please enter your address</string>
    <string name="home_page">Home Page</string>
    <string name="post_a_requirement">Post a requirement</string>
    <string name="find_a_tutor">Find a tutor</string>
    <string name="view_posted_requirements">View posted requirements</string>
    <string name="profile">Profile</string>
    <string name="user_info">User Info</string>
    <string name="setting">Setting</string>
    <string name="request_a_tutor">Request a Tutor</string>
    <string name="details_of_your_requirements">Details of your requirements</string>
    <string name="level">Level</string>
    <string name="i_want">I want</string>
    <string name="budget_in_us">Budget in $US</string>
    <string name="gender_preference">Gender Preference</string>
    <string name="tutors_wanted">Tutors wanted</string>
    <string name="only_one">Only One</string>
    <string name="more_than_one">More than one</string>
    <string name="as_many_as_possible">As many as possible</string>
    <string name="i_need_someone">I need someone</string>
    <string name="part_time">Part Time</string>
    <string name="i_can_communicate_with_tutor_in_languages">I can communicate with tutor in (languages)</string>
    <string name="language">Language</string>
    <string name="please_enter_location">Please enter location</string>
    <string name="please_enter_details_of_requirement">Please enter details of you requirements</string>
    <string name="please_enter_your_budget">Please enter your budget</string>
    <string name="please_enter_language">Please enter your language</string>
    <string name="please_select_gender_preference">Please select gender preference</string>
    <string name="please_select_tutors_wanted">Please select tutors wanted</string>
    <string name="please_select_time_preference">Please select time preference</string>
    <string name="please_select_your_level">Please select your level</string>
    <string name="please_select_your_want">Please select what you want</string>
    <string name="requirement_posted">Requirement Posted</string>
    <string name="post_details">Post Details</string>
    <string name="subject_details">Subject Details</string>
    <string name="time">Time</string>
    <string name="my_requirements">My Requirements</string>
    <string name="tutor_name">Tutor name</string>
    <string name="speciality">Speciality</string>
    <string name="subjects">Subjects</string>
    <string name="description">Description</string>
    <string name="contact_tutor">Contact Tutor</string>
    <string name="experience">Experience</string>
    <string name="logout">Logout</string>
    <string name="contact">Contact</string>
    <string name="get_reviews">Get reviews</string>
    <string name="refer_and_earn">Refer and earn</string>
    <string name="promote_yourself">Promote yourself</string>
    <string name="verify_email">Verify email</string>
    <string name="email_already_verified">Email already verified</string>
    <string name="posted_requirements">Posted Requirements</string>
    <string-array name="grades_array">
        <item>Select Grade</item>
        <item>Grade 1</item>
        <item>Grade 2</item>
        <item>Grade 3</item>
        <item>Grade 4</item>
        <item>Grade 5</item>
        <item>Grade 6</item>
        <item>Grade 7</item>
        <item>Grade 8</item>
        <item>Grade 9</item>
        <item>Grade 10</item>
        <item>Grade 11</item>
        <item>Grade 12</item>
    </string-array>

    <string-array name="level_array">
        <item>-- Select Level --</item>
        <item>--Skill Level--</item>
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Expert</item>
        <item>--Grades--</item>
        <item>Preschool, Kindergarten, KG, Nursery</item>
        <item>Grade 1</item>
        <item>Grade 2</item>
        <item>Grade 3</item>
        <item>Grade 4</item>
        <item>Grade 5</item>
        <item>Grade 6</item>
        <item>Grade 7</item>
        <item>Grade 8</item>
        <item>Grade 9</item>
        <item>Grade 10</item>
        <item>IGCSE</item>
        <item>GCSE</item>
        <item>O Level</item>
        <item>Grade 11</item>
        <item>AS Level</item>
        <item>A Level</item>
        <item>Grade 12</item>
        <item>Diploma</item>
        <item>Bachelors/Undergraduate</item>
        <item>Master/Postgraduate</item>
        <item>MPhil</item>
        <item>Doctor/Phd</item>
        <item>--Other--</item>
        <item>Adult/Casual learning</item>
    </string-array>

    <string-array name="want_array">
        <item>-- Select --</item>
        <item>Tutoring</item>
        <item>Assignment help</item>
    </string-array>

</resources>