<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/adamina"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="25sp"
        android:textColor="@color/logo_text_color"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_text"
        android:fontFamily="@font/adamina"
        android:gravity="center"
        android:text="@string/find_local_and_online_educators_for_tutoring_coaching_and_assistance_with_academic_work"
        android:textSize="15sp"
        android:textColor="@color/logo_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"
        android:layout_margin="10dp"
        />

    <View
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/student_pic"
        app:layout_constraintTop_toBottomOf="@id/tv_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:id="@+id/student_pic"/>
    <TextView
        android:id="@+id/tv_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/adamina"
        android:gravity="center"
        android:text="@string/student"
        android:textSize="25sp"
        android:textColor="@color/logo_text_color"
        app:layout_constraintTop_toBottomOf="@+id/student_pic"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"/>
    <View
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/teacher_pic"
        app:layout_constraintTop_toBottomOf="@id/tv_student"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:id="@+id/teacher_pic"/>
    <TextView
        android:id="@+id/tv_teacher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/adamina"
        android:gravity="center"
        android:text="@string/teacher"
        android:textSize="25sp"
        android:textColor="@color/logo_text_color"
        app:layout_constraintTop_toBottomOf="@+id/teacher_pic"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"/>
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_signup"
        android:text="@string/go"
        android:textColor="@color/white"
        android:fontFamily="@font/adamina"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_teacher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/logo_text_color"
        />
</androidx.constraintlayout.widget.ConstraintLayout>